--- a/estilos/style.css
+++ b/estilos/style.css
@@ -51,9 +51,10 @@ section#redes-sociais{
 }
 
 section#redes-sociais img{
+    position: absolute;
     box-sizing: border-box;
     width: 50px;
-    margin: 10px;
+    margin: 10px 10px 10px 40px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.322);
  }
